zero/argowf/resources/ns.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: argowf
  labels:
    name: argowf
