zero/argowf/resources/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: argowf-ingress
  namespace: argowf
  annotations:
    ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    # ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: argowf.grusp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argowf-server
                port:
                  number: 2746
    # - http:
    #     paths:
    #       - pathType: Prefix

    #         path: "/"
    #         backend:
    #           service:
    #             name: argowf-server
    #             port:
    #               number: 2746
